--- a/docs/docs-ref-autogen/powerpoint/powerpoint/powerpoint.requestcontext.yml
+++ b/docs/docs-ref-autogen/powerpoint/powerpoint/powerpoint.requestcontext.yml
@@ -3,7 +3,7 @@ name: PowerPoint.RequestContext
 uid: powerpoint!PowerPoint.RequestContext:class
 package: powerpoint!
 fullName: PowerPoint.RequestContext
-summary: RequestContext 对象可促进对 PowerPoint 应用程序的请求。 由于 Office 加载项和 PowerPoint 应用程序在两个不同的进程中运行，因此请求上下文是从外接程序获取对 PowerPoint 对象模型的访问权限所必需的。
+summary: RequestContext 对象便于对 PowerPoint 应用程序的请求。 由于 Office 外接程序和 PowerPoint 应用程序在两个不同的进程中运行，因此请求上下文是必需的，才能从外接程序访问 PowerPoint 对象模型。
 remarks: ''
 isPreview: false
 isDeprecated: false
@@ -13,7 +13,7 @@ constructors:
   uid: powerpoint!PowerPoint.RequestContext:constructor(1)
   package: powerpoint!
   fullName: (constructor)(url)
-  summary: 构造类的新实例 `RequestContext`
+  summary: 构造类的新 `RequestContext` 实例
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -48,11 +48,11 @@ properties:
     content: 'readonly presentation: Presentation;'
     return:
       type: <xref uid="powerpoint!PowerPoint.Presentation:class" />
-extends: <xref uid="powerpoint!OfficeExtension.ClientRequestContext:class" />
+extends: <xref uid="office!OfficeExtension.ClientRequestContext:class" />
 metadata:
-  ms.openlocfilehash: 0ddee0bf731f0b556143d4d6f6c12f4a2782797a
-  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.openlocfilehash: 55a29a81a7e2adb73b54d89dc5d65f64ec129227
+  ms.sourcegitcommit: 1f0f9464639feee4f4751fda7c2a14aa0d2f8967
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/18/2020
-  ms.locfileid: "49339754"
+  ms.lasthandoff: 12/12/2020
+  ms.locfileid: "49663747"
