--- a/docs/docs-ref-autogen/powerpoint/powerpoint/powerpoint.slidecollection.yml
+++ b/docs/docs-ref-autogen/powerpoint/powerpoint/powerpoint.slidecollection.yml
@@ -7,7 +7,7 @@ summary: >-
   代表演示文稿中幻灯片的集合。
 
 
-  \[[API 集： POWERPOINTAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/powerpoint-api-requirement-sets)\]
+  \[[API 集：PowerPointApi BETA (预览版) ](/office/dev/add-ins/reference/requirement-sets/powerpoint-api-requirement-sets)\]
 remarks: ''
 isPreview: true
 isDeprecated: false
@@ -17,7 +17,7 @@ properties:
   uid: powerpoint!PowerPoint.SlideCollection#context:member
   package: powerpoint!
   fullName: context
-  summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
+  summary: 与对象关联的请求上下文。 这会将外接程序的进程连接到 Office 主机应用程序的进程。
   remarks: ''
   isPreview: true
   isDeprecated: false
@@ -46,24 +46,24 @@ methods:
     获取集合中的幻灯片数。
 
 
-    \[[API 集： POWERPOINTAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/powerpoint-api-requirement-sets)\]
+    \[[API 集：PowerPointApi BETA (预览版) ](/office/dev/add-ins/reference/requirement-sets/powerpoint-api-requirement-sets)\]
   remarks: ''
   isPreview: true
   isDeprecated: false
   syntax:
     content: 'getCount(): OfficeExtension.ClientResult<number>;'
     return:
-      type: <xref uid="powerpoint!OfficeExtension.ClientResult:class" />&lt;number&gt;
+      type: <xref uid="office!OfficeExtension.ClientResult:class" />&lt;number&gt;
       description: 集合中的幻灯片数。
 - name: getItem(key)
   uid: powerpoint!PowerPoint.SlideCollection#getItem:member(1)
   package: powerpoint!
   fullName: getItem(key)
   summary: >-
-    使用其唯一 ID 获取幻灯片。 如果幻灯片不存在，则会引发异常。
+    使用唯一 ID 获取幻灯片。 如果幻灯片不存在，则会引发异常。
 
 
-    \[[API 集： POWERPOINTAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/powerpoint-api-requirement-sets)\]
+    \[[API 集：PowerPointApi BETA (预览版) ](/office/dev/add-ins/reference/requirement-sets/powerpoint-api-requirement-sets)\]
   remarks: ''
   isPreview: true
   isDeprecated: false
@@ -75,16 +75,16 @@ methods:
       type: string
     return:
       type: <xref uid="powerpoint!PowerPoint.Slide:class" />
-      description: 具有唯一 ID 的幻灯片。 如果不存在这样的幻灯片，则会引发异常。
+      description: 具有唯一 ID 的幻灯片。 如果此类幻灯片不存在，则会引发异常。
 - name: getItemAt(index)
   uid: powerpoint!PowerPoint.SlideCollection#getItemAt:member(1)
   package: powerpoint!
   fullName: getItemAt(index)
   summary: >-
-    使用集合中的从零开始的索引获取幻灯片。 幻灯片的存储顺序与演示文稿中显示的顺序相同。 如果 index 超出范围，则会引发异常。
+    使用集合中从零开始索引获取幻灯片。 幻灯片的存储顺序与演示文稿中显示的顺序相同。 如果索引在范围内，则会引发异常。
 
 
-    \[[API 集： POWERPOINTAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/powerpoint-api-requirement-sets)\]
+    \[[API 集：PowerPointApi BETA (预览版) ](/office/dev/add-ins/reference/requirement-sets/powerpoint-api-requirement-sets)\]
   remarks: ''
   isPreview: true
   isDeprecated: false
@@ -92,20 +92,20 @@ methods:
     content: 'getItemAt(index: number): PowerPoint.Slide;'
     parameters:
     - id: index
-      description: 集合中的幻灯片的索引。
+      description: 集合中幻灯片的索引。
       type: number
     return:
       type: <xref uid="powerpoint!PowerPoint.Slide:class" />
-      description: 给定索引处的幻灯片。 如果 index 超出范围，则会引发异常。
+      description: 位于给定索引的幻灯片。 如果索引在范围内，则会引发异常。
 - name: getItemOrNullObject(id)
   uid: powerpoint!PowerPoint.SlideCollection#getItemOrNullObject:member(1)
   package: powerpoint!
   fullName: getItemOrNullObject(id)
   summary: >-
-    使用其唯一 ID 获取幻灯片。 返回一个对象，其 `isNullObject` 属性设置为 `true` 如果幻灯片不存在。
+    使用唯一 ID 获取幻灯片。 如果幻灯片不存在，则返回其属性 `isNullObject` `true` 设置为的对象。
 
 
-    \[[API 集： POWERPOINTAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/powerpoint-api-requirement-sets)\]
+    \[[API 集：PowerPointApi BETA (预览版) ](/office/dev/add-ins/reference/requirement-sets/powerpoint-api-requirement-sets)\]
   remarks: ''
   isPreview: true
   isDeprecated: false
@@ -117,7 +117,7 @@ methods:
       type: string
     return:
       type: <xref uid="powerpoint!PowerPoint.Slide:class" />
-      description: 具有唯一 ID 的幻灯片。 如果不存在这样的幻灯片，则 `isNullObject` 返回其属性设置为的对象 `true` 。
+      description: 具有唯一 ID 的幻灯片。 如果此类幻灯片不存在，则返回其 `isNullObject` 属性设置为 `true` 的对象。
 - name: load(options)
   uid: powerpoint!PowerPoint.SlideCollection#load:member(1)
   package: powerpoint!
@@ -147,7 +147,7 @@ methods:
     content: 'load(propertyNames?: string | string[]): PowerPoint.SlideCollection;'
     parameters:
     - id: propertyNames
-      description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
+      description: 以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
       type: string | string[]
     return:
       type: <xref uid="powerpoint!PowerPoint.SlideCollection:class" />
@@ -164,8 +164,8 @@ methods:
     content: 'load(propertyNamesAndPaths?: OfficeExtension.LoadOption): PowerPoint.SlideCollection;'
     parameters:
     - id: propertyNamesAndPaths
-      description: '`propertyNamesAndPaths.select` 是一个以逗号分隔的字符串，用于指定要加载的属性，并且 `propertyNamesAndPaths.expand` 是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
-      type: <xref uid="powerpoint!OfficeExtension.LoadOption:interface" />
+      description: '`propertyNamesAndPaths.select` 是一个以逗号分隔的字符串，用于指定要加载的属性，它是一个以逗号分隔的字符串，用于指定要加载的 `propertyNamesAndPaths.expand` 导航属性。'
+      type: <xref uid="office!OfficeExtension.LoadOption:interface" />
     return:
       type: <xref uid="powerpoint!PowerPoint.SlideCollection:class" />
       description: ''
@@ -173,7 +173,7 @@ methods:
   uid: powerpoint!PowerPoint.SlideCollection#toJSON:member(1)
   package: powerpoint!
   fullName: toJSON()
-  summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，调用 `toJSON` 传递给它的对象的方法。 ) 而原始 `PowerPoint.SlideCollection` 对象是 API 对象，则该 `toJSON` 方法返回一个纯 JavaScript 对象 (类型为 `PowerPoint.Interfaces.SlideCollectionData`<!-- -->包含集合项中任何已加载属性的浅表的 "items" 数组 ) 。
+  summary: 重写 JavaScript 方法，以便向 API 对象传递 `toJSON()` 时提供更多有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->，反过来，调用传递给它的对象的方法。) 而原始对象是 API 对象，该方法返回一个类型为 (`toJSON` `PowerPoint.SlideCollection` `toJSON` JavaScript 对象 `PowerPoint.Interfaces.SlideCollectionData`<!-- -->) 包含"items"数组，其中包含集合项中任何已加载属性的浅表副本。
   remarks: ''
   isPreview: true
   isDeprecated: false
@@ -182,11 +182,11 @@ methods:
     return:
       type: <xref uid="powerpoint!PowerPoint.Interfaces.SlideCollectionData:interface" />
       description: ''
-extends: <xref uid="powerpoint!OfficeExtension.ClientObject:class" />
+extends: <xref uid="office!OfficeExtension.ClientObject:class" />
 metadata:
-  ms.openlocfilehash: 479e73e5674f261f2f0b06e8dbe2c69318195ddd
-  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.openlocfilehash: 3ab70c6d3c345eb9f286dfbdac15c47cd1f1a3bb
+  ms.sourcegitcommit: 1f0f9464639feee4f4751fda7c2a14aa0d2f8967
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/18/2020
-  ms.locfileid: "49181975"
+  ms.lasthandoff: 12/12/2020
+  ms.locfileid: "49663735"
