--- a/docs/docs-ref-autogen/powerpoint_1_1/powerpoint/powerpoint.application.yml
+++ b/docs/docs-ref-autogen/powerpoint_1_1/powerpoint/powerpoint.application.yml
@@ -3,7 +3,7 @@ name: PowerPoint.Application
 uid: powerpoint!PowerPoint.Application:class
 package: powerpoint!
 fullName: PowerPoint.Application
-summary: '\[[API 集： PowerPointApi 1.0](/office/dev/add-ins/reference/requirement-sets/powerpoint-api-requirement-sets)\]'
+summary: '\[[API 集：PowerPointApi 1.0](/office/dev/add-ins/reference/requirement-sets/powerpoint-api-requirement-sets)\]'
 remarks: ''
 isPreview: false
 isDeprecated: false
@@ -13,7 +13,7 @@ properties:
   uid: powerpoint!PowerPoint.Application#context:member
   package: powerpoint!
   fullName: context
-  summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
+  summary: 与对象关联的请求上下文。 这会将外接程序的进程连接到 Office 主机应用程序的进程。
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -26,7 +26,7 @@ methods:
   uid: powerpoint!PowerPoint.Application.newObject:member(1)
   package: powerpoint!
   fullName: newObject(context)
-  summary: 创建 PowerPoint 的新实例。 Application 对象
+  summary: 创建 PowerPoint.Application 对象的新实例
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -35,7 +35,7 @@ methods:
     parameters:
     - id: context
       description: ''
-      type: <xref uid="powerpoint!OfficeExtension.ClientRequestContext:class" />
+      type: <xref uid="office!OfficeExtension.ClientRequestContext:class" />
     return:
       type: <xref uid="powerpoint!PowerPoint.Application:class" />
       description: ''
@@ -43,7 +43,7 @@ methods:
   uid: powerpoint!PowerPoint.Application#toJSON:member(1)
   package: powerpoint!
   fullName: toJSON()
-  summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，调用 `toJSON` 传递给它的对象的方法。 ) ，而原始的 PowerPoint. Application 对象是 API 对象，则该 `toJSON` 方法返回一个简单的 JavaScript 对象 (类型为 `PowerPoint.Interfaces.ApplicationData`<!-- -->) ，其中包含原始对象中任何已加载的子属性的浅表副本。
+  summary: 重写 JavaScript 方法，以便向 API 对象传递 `toJSON()` 时提供更多有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->，反过来，调用传递给该对象的方法。) 而原始 PowerPoint.Application 对象是一个 API 对象，该方法返回一个类型为 (`toJSON` `toJSON` JavaScript 对象 `PowerPoint.Interfaces.ApplicationData`<!-- -->) 包含原始对象中任何加载的子属性的浅表副本。
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -58,11 +58,11 @@ methods:
                     [key: string]: string;
                 }
       description: ''
-extends: <xref uid="powerpoint!OfficeExtension.ClientObject:class" />
+extends: <xref uid="office!OfficeExtension.ClientObject:class" />
 metadata:
-  ms.openlocfilehash: 1c26ce4ac22f95221567c819ef48e0269aa5f61d
-  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.openlocfilehash: d9ec9470ac15b32f7fe8f2180e278d3e3714a955
+  ms.sourcegitcommit: 1f0f9464639feee4f4751fda7c2a14aa0d2f8967
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/18/2020
-  ms.locfileid: "49263664"
+  ms.lasthandoff: 12/12/2020
+  ms.locfileid: "49663761"
