--- a/docs/docs-ref-autogen/powerpoint_1_1/powerpoint/powerpoint.presentation.yml
+++ b/docs/docs-ref-autogen/powerpoint_1_1/powerpoint/powerpoint.presentation.yml
@@ -3,7 +3,7 @@ name: PowerPoint.Presentation
 uid: powerpoint!PowerPoint.Presentation:class
 package: powerpoint!
 fullName: PowerPoint.Presentation
-summary: '\[[API 集： PowerPointApi 1.0](/office/dev/add-ins/reference/requirement-sets/powerpoint-api-requirement-sets)\]'
+summary: '\[[API 集：PowerPointApi 1.0](/office/dev/add-ins/reference/requirement-sets/powerpoint-api-requirement-sets)\]'
 remarks: ''
 isPreview: false
 isDeprecated: false
@@ -13,7 +13,7 @@ properties:
   uid: powerpoint!PowerPoint.Presentation#context:member
   package: powerpoint!
   fullName: context
-  summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
+  summary: 与对象关联的请求上下文。 这会将外接程序的进程连接到 Office 主机应用程序的进程。
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -63,7 +63,7 @@ methods:
     content: 'load(propertyNames?: string | string[]): PowerPoint.Presentation;'
     parameters:
     - id: propertyNames
-      description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
+      description: 以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
       type: string | string[]
     return:
       type: <xref uid="powerpoint!PowerPoint.Presentation:class" />
@@ -84,7 +84,7 @@ methods:
               }): PowerPoint.Presentation;
     parameters:
     - id: propertyNamesAndPaths
-      description: '`propertyNamesAndPaths.select` 是一个以逗号分隔的字符串，用于指定要加载的属性，并且 `propertyNamesAndPaths.expand` 是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
+      description: '`propertyNamesAndPaths.select` 是一个以逗号分隔的字符串，用于指定要加载的属性，它是一个以逗号分隔的字符串，用于指定要加载的 `propertyNamesAndPaths.expand` 导航属性。'
       type: >-
         {
                     select?: string;
@@ -97,7 +97,7 @@ methods:
   uid: powerpoint!PowerPoint.Presentation#toJSON:member(1)
   package: powerpoint!
   fullName: toJSON()
-  summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，调用 `toJSON` 传递给它的对象的方法。 ) 而原始的 PowerPoint. Presentation 对象是一个 API 对象，该 `toJSON` 方法返回一个简单的 JavaScript 对象 (类型为 `PowerPoint.Interfaces.PresentationData`<!-- -->) ，其中包含原始对象中任何已加载的子属性的浅表副本。
+  summary: 重写 JavaScript 方法，以便向 API 对象传递 `toJSON()` 时提供更多有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->，反过来，调用传递给该对象的方法。) 而原始 PowerPoint.Presentation 对象是一个 API 对象，该方法返回一个类型为 (`toJSON` `toJSON` JavaScript 对象 `PowerPoint.Interfaces.PresentationData`<!-- -->) 包含原始对象中任何加载的子属性的浅表副本。
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -106,11 +106,11 @@ methods:
     return:
       type: <xref uid="powerpoint!PowerPoint.Interfaces.PresentationData:interface" />
       description: ''
-extends: <xref uid="powerpoint!OfficeExtension.ClientObject:class" />
+extends: <xref uid="office!OfficeExtension.ClientObject:class" />
 metadata:
-  ms.openlocfilehash: 86d6bb48663ab9c3b49f0a6668fff06eed338c44
-  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.openlocfilehash: 55ad55f2798ed28cdc476951cb98f0afa04a8819
+  ms.sourcegitcommit: 1f0f9464639feee4f4751fda7c2a14aa0d2f8967
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/18/2020
-  ms.locfileid: "49150314"
+  ms.lasthandoff: 12/12/2020
+  ms.locfileid: "49663734"
