--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.rangeformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.rangeformatupdatedata.yml
@@ -3,7 +3,7 @@ name: Excel.Interfaces.RangeFormatUpdateData
 uid: excel!Excel.Interfaces.RangeFormatUpdateData:interface
 package: excel!
 fullName: Excel.Interfaces.RangeFormatUpdateData
-summary: 一个用于更新 RangeFormat 对象上的数据的接口，可用于 `rangeFormat.set({ ... })`<!-- -->.
+summary: 用于更新 RangeFormat 对象上数据的接口，用于 `rangeFormat.set({ ... })`<!-- -->.
 remarks: ''
 isPreview: false
 isDeprecated: false
@@ -14,10 +14,10 @@ properties:
   package: excel!
   fullName: autoIndent
   summary: >-
-    指定当文本对齐方式设置为相等分布时，文本是否自动缩进。
+    指定当文本对齐方式设置为相等分布时文本是否自动缩进。
 
 
-    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集：ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -33,7 +33,7 @@ properties:
     应用于整个区域的 Border 对象的集合。
 
 
-    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集：ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -46,10 +46,10 @@ properties:
   package: excel!
   fullName: columnWidth
   summary: >-
-    指定区域中所有 colums 的宽度。 如果列宽不统一，则返回 NULL。
+    指定范围内所有列宽。 如果列宽不统一，则返回 NULL。
 
 
-    \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集：ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -65,7 +65,7 @@ properties:
     返回在整个区域内定义的 fill 对象。
 
 
-    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集：ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -81,7 +81,7 @@ properties:
     返回在整个区域内定义的 Font 对象。
 
 
-    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集：ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -94,10 +94,10 @@ properties:
   package: excel!
   fullName: horizontalAlignment
   summary: >-
-    表示指定对象的水平对齐方式。 有关详细信息，请参阅 HorizontalAlignment。
+    表示指定对象的水平对齐方式。 有关详细信息，请参阅 Excel.HorizontalAlignment。
 
 
-    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集：ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -113,7 +113,7 @@ properties:
     0 到 250 之间的一个整数，指示缩进水平。
 
 
-    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集：ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -129,7 +129,7 @@ properties:
     返回某一区域的格式 protection 对象。
 
 
-    \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集：ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -145,7 +145,7 @@ properties:
     区域的读取顺序。
 
 
-    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集：ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -158,10 +158,10 @@ properties:
   package: excel!
   fullName: rowHeight
   summary: >-
-    区域中所有行的高度。 如果行高不一致，则将返回 null。
+    范围中所有行的高度。 如果行高不一致，将返回 null。
 
 
-    \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集：ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -174,10 +174,10 @@ properties:
   package: excel!
   fullName: shrinkToFit
   summary: >-
-    指定文本是否自动收缩以显示可用列宽。
+    指定文本是否自动缩小以适应可用列宽。
 
 
-    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集：ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -190,10 +190,10 @@ properties:
   package: excel!
   fullName: textOrientation
   summary: >-
-    区域中所有单元格的文本方向。 文本方向应为-90 到90之间的整数，或者为180垂直方向的文本。 如果区域中的方向不一致，则将返回 null。
+    区域内所有单元格的文本方向。 对于垂直方向的文本，文本方向应为 -90 到 90 或 180 的整数。 如果范围内的方向不一致，则返回 null。
 
 
-    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集：ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -206,10 +206,10 @@ properties:
   package: excel!
   fullName: useStandardHeight
   summary: >-
-    确定 Range 对象的行高是否等于工作表的标准行高。 如果 Range 对象的行高等于工作表的标准高度，则返回 True。 如果区域包含多行，并且行不是都具有相同的高度，则返回 Null。 否则返回 False。
+    确定对象的行高 `Range` 是否等于工作表的标准高度。 返回 `true` 对象行高 `Range` 是否等于工作表的标准高度。 如果区域包含多个行且行的高度不相同，则返回 `null` 。 否则 `false` 返回。 注意：此属性仅用于 `true`<!-- -->. 设置它 `false` 不起作用。
 
 
-    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集：ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -222,10 +222,10 @@ properties:
   package: excel!
   fullName: useStandardWidth
   summary: >-
-    指定 Range 对象的列宽是否等于工作表的标准宽度。 如果 Range 对象的列宽等于工作表的标准宽度，则返回 True。 如果区域中包含多个列，并且各列的高度不相同，则返回 Null。 否则返回 False。
+    指定对象的列宽是否等于工作表的标准 `Range` 宽度。 返回 `true` 对象列宽 `Range` 是否等于工作表的标准宽度。 如果区域包含多个列并且列的高度不相同，则返回 `null` 。 否则 `false` 返回。 注意：此属性仅用于 `true`<!-- -->. 设置它 `false` 不起作用。
 
 
-    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集：ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -238,10 +238,10 @@ properties:
   package: excel!
   fullName: verticalAlignment
   summary: >-
-    表示指定对象的垂直对齐方式。 有关详细信息，请参阅 VerticalAlignment。
+    表示指定对象的垂直对齐方式。 有关详细信息，请参阅 Excel.VerticalAlignment。
 
 
-    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集：ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -254,10 +254,10 @@ properties:
   package: excel!
   fullName: wrapText
   summary: >-
-    指定 Excel 是否对对象中的文本进行换行。 指示整个区域不具有统一换行设置的空值
+    指定 Excel 是否将对象中的文本换行。 指示整个区域不具有统一换行设置的空值
 
 
-    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集：ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -266,9 +266,9 @@ properties:
     return:
       type: boolean
 metadata:
-  ms.openlocfilehash: 74c381cadca2d787a180a1693b74a7ecc685b762
-  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.openlocfilehash: 480ba389b85f0815e0ebe8b18aca225ebd7685d1
+  ms.sourcegitcommit: 7638b7bb09785169ddffea180b66796f077361d8
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/18/2020
-  ms.locfileid: "49172490"
+  ms.lasthandoff: 01/06/2021
+  ms.locfileid: "49772575"
