--- a/docs/docs-ref-autogen/excel_1_12/excel/excel.interfaces.rangeformatloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_12/excel/excel.interfaces.rangeformatloadoptions.yml
@@ -7,7 +7,7 @@ summary: >-
   一个格式对象，其中封装了区域的字体、填充、边框、对齐方式和其他属性。
 
 
-  \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  \[[API 集：ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
 remarks: ''
 isPreview: false
 isDeprecated: false
@@ -17,7 +17,7 @@ properties:
   uid: excel!Excel.Interfaces.RangeFormatLoadOptions#$all:member
   package: excel!
   fullName: $all
-  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  summary: 为 `$all` LoadOptions 指定将加载所有标量 (，例如： `Range.address`<!-- -->) 导航属性， (属性，例如： `Range.format.fill.color`<!-- -->).
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -30,10 +30,10 @@ properties:
   package: excel!
   fullName: autoIndent
   summary: >-
-    指定当文本对齐方式设置为相等分布时，文本是否自动缩进。
+    指定当文本对齐方式设置为相等分布时文本是否自动缩进。
 
 
-    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集：ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -49,7 +49,7 @@ properties:
     应用于整个区域的 Border 对象的集合。
 
 
-    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集：ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -62,10 +62,10 @@ properties:
   package: excel!
   fullName: columnWidth
   summary: >-
-    指定区域中所有 colums 的宽度。 如果列宽不统一，则返回 NULL。
+    指定范围内所有列宽。 如果列宽不统一，则返回 NULL。
 
 
-    \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集：ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -81,7 +81,7 @@ properties:
     返回在整个区域内定义的 fill 对象。
 
 
-    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集：ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -97,7 +97,7 @@ properties:
     返回在整个区域内定义的 Font 对象。
 
 
-    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集：ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -110,10 +110,10 @@ properties:
   package: excel!
   fullName: horizontalAlignment
   summary: >-
-    表示指定对象的水平对齐方式。 有关详细信息，请参阅 HorizontalAlignment。
+    表示指定对象的水平对齐方式。 有关详细信息，请参阅 Excel.HorizontalAlignment。
 
 
-    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集：ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -129,7 +129,7 @@ properties:
     0 到 250 之间的一个整数，指示缩进水平。
 
 
-    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集：ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -145,7 +145,7 @@ properties:
     返回某一区域的格式 protection 对象。
 
 
-    \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集：ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -161,7 +161,7 @@ properties:
     区域的读取顺序。
 
 
-    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集：ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -174,10 +174,10 @@ properties:
   package: excel!
   fullName: rowHeight
   summary: >-
-    区域中所有行的高度。 如果行高不一致，则将返回 null。
+    范围中所有行的高度。 如果行高不一致，将返回 null。
 
 
-    \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集：ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -190,10 +190,10 @@ properties:
   package: excel!
   fullName: shrinkToFit
   summary: >-
-    指定文本是否自动收缩以显示可用列宽。
+    指定文本是否自动缩小以适应可用列宽。
 
 
-    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集：ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -206,10 +206,10 @@ properties:
   package: excel!
   fullName: textOrientation
   summary: >-
-    区域中所有单元格的文本方向。 文本方向应为-90 到90之间的整数，或者为180垂直方向的文本。 如果区域中的方向不一致，则将返回 null。
+    区域内所有单元格的文本方向。 对于垂直方向的文本，文本方向应为 -90 到 90 或 180 的整数。 如果范围内的方向不一致，则返回 null。
 
 
-    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集：ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -222,10 +222,10 @@ properties:
   package: excel!
   fullName: useStandardHeight
   summary: >-
-    确定 Range 对象的行高是否等于工作表的标准行高。 如果 Range 对象的行高等于工作表的标准高度，则返回 True。 如果区域包含多行，并且行不是都具有相同的高度，则返回 Null。 否则返回 False。
+    确定对象的行高 `Range` 是否等于工作表的标准高度。 返回 `true` 对象行高 `Range` 是否等于工作表的标准高度。 如果区域包含多个行且行的高度不相同，则返回 `null` 。 否则 `false` 返回。 注意：此属性仅用于 `true`<!-- -->. 设置它 `false` 不起作用。
 
 
-    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集：ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -238,10 +238,10 @@ properties:
   package: excel!
   fullName: useStandardWidth
   summary: >-
-    指定 Range 对象的列宽是否等于工作表的标准宽度。 如果 Range 对象的列宽等于工作表的标准宽度，则返回 True。 如果区域中包含多个列，并且各列的高度不相同，则返回 Null。 否则返回 False。
+    指定对象的列宽是否等于工作表的标准 `Range` 宽度。 返回 `true` 对象列宽 `Range` 是否等于工作表的标准宽度。 如果区域包含多个列并且列的高度不相同，则返回 `null` 。 否则 `false` 返回。 注意：此属性仅用于 `true`<!-- -->. 设置它 `false` 不起作用。
 
 
-    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集：ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -254,10 +254,10 @@ properties:
   package: excel!
   fullName: verticalAlignment
   summary: >-
-    表示指定对象的垂直对齐方式。 有关详细信息，请参阅 VerticalAlignment。
+    表示指定对象的垂直对齐方式。 有关详细信息，请参阅 Excel.VerticalAlignment。
 
 
-    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集：ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -270,10 +270,10 @@ properties:
   package: excel!
   fullName: wrapText
   summary: >-
-    指定 Excel 是否对对象中的文本进行换行。 指示整个区域不具有统一换行设置的空值
+    指定 Excel 是否将对象中的文本换行。 指示整个区域不具有统一换行设置的空值
 
 
-    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集：ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -282,9 +282,9 @@ properties:
     return:
       type: boolean
 metadata:
-  ms.openlocfilehash: 7b88ead02bb43d171c241fcfdac87c291f1ba691
-  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.openlocfilehash: ed2f7ffcb8d3d3f4db0fc33bc67489b92aca2595
+  ms.sourcegitcommit: 7638b7bb09785169ddffea180b66796f077361d8
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/18/2020
-  ms.locfileid: "49148781"
+  ms.lasthandoff: 01/06/2021
+  ms.locfileid: "49772617"
