--- a/docs/docs-ref-autogen/powerpoint/toc.yml
+++ b/docs/docs-ref-autogen/powerpoint/toc.yml
@@ -13,6 +13,8 @@ items:
                 uid: 'powerpoint!PowerPoint.ErrorCodes:enum'
               - name: InsertSlideFormatting
                 uid: 'powerpoint!PowerPoint.InsertSlideFormatting:enum'
+          - name: AddSlideOptions
+            uid: 'powerpoint!PowerPoint.AddSlideOptions:interface'
           - name: 应用程序
             uid: 'powerpoint!PowerPoint.Application:class'
           - name: InsertSlideOptions
@@ -21,10 +23,22 @@ items:
             uid: 'powerpoint!PowerPoint.Presentation:class'
           - name: RequestContext
             uid: 'powerpoint!PowerPoint.RequestContext:class'
+          - name: 形状
+            uid: 'powerpoint!PowerPoint.Shape:class'
+          - name: ShapeCollection
+            uid: 'powerpoint!PowerPoint.ShapeCollection:class'
           - name: 幻灯片
             uid: 'powerpoint!PowerPoint.Slide:class'
           - name: SlideCollection
             uid: 'powerpoint!PowerPoint.SlideCollection:class'
+          - name: SlideLayout
+            uid: 'powerpoint!PowerPoint.SlideLayout:class'
+          - name: SlideLayoutCollection
+            uid: 'powerpoint!PowerPoint.SlideLayoutCollection:class'
+          - name: SlideMaster
+            uid: 'powerpoint!PowerPoint.SlideMaster:class'
+          - name: SlideMasterCollection
+            uid: 'powerpoint!PowerPoint.SlideMasterCollection:class'
       - name: 通用 API
         uid: office!
         items:
