commit translated contents

--- a/docs/docs-ref-autogen/office/office/office.savesettingsoptions.yml
+++ b/docs/docs-ref-autogen/office/office/office.savesettingsoptions.yml
@@ -13,7 +13,7 @@ properties:
   uid: office!Office.SaveSettingsOptions#asyncContext:member
   package: office!
   fullName: asyncContext
-  summary: 在传递给回调的 AsyncResult 对象的 asyncContext 属性中返回的、任何类型的用户定义的项目未更改。
+  summary: 在传递给回调的 AsyncResult 对象的 asyncContext 属性中返回的任何类型的用户定义项，保持不变。
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -25,7 +25,7 @@ properties:
   uid: office!Office.SaveSettingsOptions#overwriteIfStale:member
   package: office!
   fullName: overwriteIfStale
-  summary: 指示是否将在陈旧时替换该设置。
+  summary: '**警告**：此设置已弃用，不应使用。 它对于大多数平台没有影响，如果设置为 Excel 网页，则会导致 `false` 错误。'
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -34,9 +34,9 @@ properties:
     return:
       type: boolean
 metadata:
-  ms.openlocfilehash: b66b59b40bac5772332a7f1db9ce9851de876c41
-  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.openlocfilehash: 85c7bef98cda82a1d86da35592bf8411722fd85a
+  ms.sourcegitcommit: f31e8e4a8d442d46e7845cc14d379dc6aced9c5a
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/18/2020
-  ms.locfileid: "49183277"
+  ms.lasthandoff: 01/29/2021
+  ms.locfileid: "50045008"
